demo-3-blue-green/step-1-all-blue.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green
spec:
  traffic:
    - revisionName: blue-green-00001
      percent: 100
