demo-3-blue-green/step-1-route-all-blue.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo
spec:
  traffic:
    - revisionName: blue-green-demo-00001
      percent: 100
