demo-3-blue-green/step-2-stage-green.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo
spec:
  traffic:
    - revisionName: blue-green-demo-00001
      percent: 100
    - revisionName: blue-green-demo-00002
      percent: 0
      name: v2
