demo-3-blue-green/step-3-50-50.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green
spec:
  traffic:
    - revisionName: blue-green-00001
      percent: 50
    - revisionName: blue-green-00002
      percent: 50
      name: v2
