demo-3-blue-green/step-4-all-green.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green
spec:
  traffic:
    - revisionName: blue-green-00002
      percent: 100
