demo-3-blue-green/step-4-route-all-green.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo
spec:
  traffic:
    - revisionName: blue-green-demo-00002
      percent: 100
